--- a/Project Stand Tower/Assembly-CSharp.csproj
+++ b/Project Stand Tower/Assembly-CSharp.csproj
@@ -38,8 +38,11 @@
   <ItemGroup>
      <Compile Include="Assets\Script\Enemy.cs" />
      <Compile Include="Assets\Script\Gizumosu.cs" />
+     <Compile Include="Assets\Script\PlaceTower.cs" />
      <Compile Include="Assets\Script\Waypoints.cs" />
      <Compile Include="Assets\Script\SpawnPoints.cs" />
+     <Compile Include="Assets\Script\TESTING\EnemySpawner.cs" />
+     <Compile Include="Assets\Script\TESTING\EnemyMovement.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.19f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
@@ -287,7 +290,13 @@
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.19f1\Editor\Data\Managed\UnityEngine\UnityEditor.UnityConnectModule.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\PackageCache\com.unity.visualscripting@1.8.0\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\PackageCache\com.unity.visualscripting@1.8.0\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Android.Types">
+        <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.19f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Types.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Android.Gradle">
+        <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.19f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Gradle.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.19f1\Editor\Data\NetStandard\ref\2.1.0\netstandard.dll</HintPath>
@@ -656,58 +665,58 @@
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.19f1\Editor\Data\NetStandard\compat\2.1.0\shims\netfx\System.Xml.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Flow.Editor">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.Flow.Editor.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.Flow.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Shared.Editor">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.Shared.Editor.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.Shared.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Core.Editor">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.State.Editor">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.State.Editor.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.State.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.SettingsProvider.Editor">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Flow">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PlasticSCM.Editor">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.PlasticSCM.Editor.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.PlasticSCM.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.State">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Core">
-        <HintPath>C:\Users\USER\Documents\Private Document\Project\Game Design\Project-Stand-Tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.Core.dll</HintPath>
+        <HintPath>C:\Users\Administrator\Documents\Projects\project-stand-tower\Project Stand Tower\Library\ScriptAssemblies\Unity.VisualScripting.Core.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
