Add tower, enemies health & removed wave
1. Add tower that can shoot enemies in certain distance including rotate facing to enemies
2. Add enemies health (not visible)
3. Temporary removed Enemies wave due to critical bug

--- a/Project Stand Tower/Assembly-CSharp.csproj
+++ b/Project Stand Tower/Assembly-CSharp.csproj
@@ -57,15 +57,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Script\Enemy.cs" />
+    <Compile Include="Assets\Script\Tower.cs" />
     <Compile Include="Assets\Script\Gizumosu.cs" />
     <Compile Include="Assets\Script\Waypoint.cs" />
     <Compile Include="Assets\Script\PlaceTower.cs" />
     <Compile Include="Assets\Script\EnemyController.cs" />
+    <Compile Include="Assets\Script\EnemyHealth.cs" />
     <Compile Include="Assets\Script\Waypoints.cs" />
     <Compile Include="Assets\Script\SpawnPoints.cs" />
     <Compile Include="Assets\Script\EnemySpawner.cs" />
-    <Compile Include="Assets\Script\WaveManager.cs" />
-    <Compile Include="Assets\Script\Wave.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
